--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
 .text {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
+
+#picture {
+    top:calc(auto+30px);
+    left:auto;
+}
