--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-div, p, pre {
+/*div, p, pre {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
@@ -73,3 +73,4 @@ button:hover {
     left:35%;
     top: 100px;
 }
+*/
