Made more responsive

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ div, p, pre {
 .menu-item {
     background-color: black;
     color:white;
+    font-size: 1vw;
 }
 
 .menu-item:hover {
@@ -39,13 +40,14 @@ div, p, pre {
     position:absolute;
     top:0px;
     left:0px;
+
 }
 
 #picture-of-myself {
     position:relative;
     left:45%;
     top:0px;
-    width:100%
+    max-width:100%
 }
 
 #about {
@@ -63,7 +65,7 @@ div, p, pre {
 
 button {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 15px;
+    font-size: 1.5vw;
     border: 0px solid white;
     background-color: white;
     color: green;
@@ -79,7 +81,7 @@ button:hover {
     position:relative;
     left:35%;
     top: 100px;
-    width: 100%
+    max-width: 100%
 }
 
 #submitbtn {
