--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ div, p, pre {
 .menu-item {
     background-color: black;
     color:white;
-    font-size: 1vw;
+    font-size: 2vw;
 }
 
 .menu-item:hover {
@@ -65,7 +65,7 @@ div, p, pre {
 
 button {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1vw;
+    font-size: 1.5vw;
     border: 0px solid white;
     background-color: white;
     color: green;
@@ -73,7 +73,7 @@ button {
 
 button:hover {
     color:purple;
-    font-size: medium;
+    font-size: xx-large;
 }
 
 
