--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ div, p, pre {
 
 button {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 2vw;
+    font-size: 15px;
     border: 0px solid white;
     background-color: white;
     color: green;
@@ -73,7 +73,6 @@ button {
 
 button:hover {
     color:purple;
-    font-size: xx-large;
 }
 
 
